<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_card"
        android:layout_marginTop="16dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_avatar"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_margin="16dp"
            android:src="@mipmap/avatar" />

        <TextView
            android:id="@+id/tv_nickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/iv_avatar"
            android:layout_toEndOf="@id/iv_avatar"
            android:layout_toRightOf="@id/iv_avatar"
            android:layout_marginTop="@dimen/spacing_tiny"
            android:text="@string/AboutFragment_label_nickname"
            android:textSize="@dimen/font_size_normal_high"
            android:textColor="@color/gray_dark"
            tools:ignore="HardcodedText"/>

        <TextView
            android:id="@+id/tv_introduction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/iv_avatar"
            android:layout_toRightOf="@id/iv_avatar"
            android:layout_alignBottom="@id/iv_avatar"
            android:layout_marginBottom="@dimen/spacing_tiny"
            android:text="@string/AboutFragment_desc_introduction"
            android:textSize="@dimen/font_size_small"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_card"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:orientation="vertical"
        android:layout_marginTop="32dp">

        <LinearLayout
            android:id="@+id/grade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:background="@drawable/bottom_line">

            <TextView
                android:id="@+id/tv_grade"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/AboutFragment_label_grade"
                android:textSize="@dimen/font_size_normal_high"
                android:textColor="@color/gray_dark"
                android:layout_gravity="center_vertical"/>

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@mipmap/ic_arrow_right"
                android:layout_gravity="center_vertical"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/contact_me"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bottom_line">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/AboutFragment_label_contact_me"
                android:textSize="@dimen/font_size_normal_high"
                android:textColor="@color/gray_dark"
                android:layout_gravity="center_vertical"/>

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@mipmap/ic_arrow_right"
                android:layout_gravity="center_vertical"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/help"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bottom_line">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/AboutFragment_label_help"
                android:textSize="@dimen/font_size_normal_high"
                android:textColor="@color/gray_dark"
                android:layout_gravity="center_vertical"/>

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@mipmap/ic_arrow_right"
                android:layout_gravity="center_vertical"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/setting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bottom_line">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/AboutFragment_label_setting"
                android:textSize="@dimen/font_size_normal_high"
                android:textColor="@color/gray_dark"
                android:layout_gravity="center_vertical"/>

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@mipmap/ic_arrow_right"
                android:layout_gravity="center_vertical"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/check_update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bottom_line">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/AboutFragment_label_check_update"
                android:textSize="@dimen/font_size_normal_high"
                android:textColor="@color/gray_dark"
                android:layout_gravity="center_vertical"/>

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@mipmap/ic_arrow_right"
                android:layout_gravity="center_vertical"
                />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>